feat: Production ready - Newsletter Smart City, SEO optimisé, Supabase configuré
 Features:
- Newsletter Smart City avec message orienté Smart City
- Optimisation SEO complète (sitemap, robots, métadonnées)
- Tables Supabase créées et configurées (RLS fixé)
- Données structurées JSON-LD (Schema.org)
- Design Apple/Tesla sur toutes les pages
- Documentation complète

 Technical:
- Next.js 15.5.4
- React 19.2.0
- TypeScript strict
- Framer Motion animations
- Responsive design

 SEO:
- Sitemap.xml dynamique
- Robots.txt configuré
- Métadonnées complètes sur toutes les pages
- Open Graph et Twitter Cards
- Domaine: yunicity-website.vercel.app

 Limitation temporaire:
- Emails uniquement à yu.entreprise@gmail.com (onboarding@resend.dev)
- Domaine email à configurer plus tard pour emails à tous

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ next-env.d.ts
 
 # Test files
 test-*.js
+.vercel
+
+# Claude settings (local)
+.claude/settings.local.json
+
+# Documentation temporaire (à garder mais optionnel)
+# *.md (décommenter si vous ne voulez pas commit les docs)
