--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-three/fiber": "^9.3.0",
     "@react-three/rapier": "^2.2.0",
     "@supabase/supabase-js": "^2.58.0",
+    "@types/leaflet": "1.9.21",
     "@use-gesture/react": "^10.3.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
+    "leaflet": "1.9.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "meshline": "^3.3.1",
@@ -28,6 +30,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "5.0.0",
     "recharts": "^3.2.1",
     "resend": "^6.1.1",
     "three": "^0.180.0"
